--- a/app/project1/webapp/view/Employeedetail.view.xml
+++ b/app/project1/webapp/view/Employeedetail.view.xml
@@ -1,16 +1,172 @@
-<mvc:View
-  controllerName="project1.controller.EmployeeDetail"
-  xmlns:mvc="sap.ui.core.mvc"
-  xmlns="sap.m">
-  <Page id="_IDGenPage2" title="Employee Details">
-    <content>
-      <VBox id="_IDGenVBox">
-        <Text id="_IDGenText" text="Employee ID: {mainModel>EmployeeID}" />
-        <Text id="_IDGenText1" text="Name: {mainModel>Name}" />
-        <Text id="_IDGenText2" text="Department: {mainModel>Department}" />
-        <Text id="_IDGenText3" text="Salary: {mainModel>Salary}" />
-        <Text id="_IDGenText4" text="Age: {mainModel>Age}" />
-      </VBox>
-    </content>
-  </Page>
+<mvc:View xmlns:mvc="sap.ui.core.mvc"
+    xmlns="sap.uxap"
+    xmlns:m="sap.m"
+    xmlns:core="sap.ui.core"
+    controllerName="project1.controller.EmployeeDetail"
+    height="100%">
+ 
+    <ObjectPageLayout id="EmployeeObjectPage"
+        showTitleInHeaderContent="true"
+        upperCaseAnchorBar="false">
+       
+        <headerTitle>
+            <ObjectPageDynamicHeaderTitle id="_IDGenObjectPageDynamicHeaderTitle">
+                <expandedHeading>
+                    <m:Title id="_IDGenTitle1" text="Employee Information" wrapping="true" />
+                </expandedHeading>
+ 
+                <snappedHeading>
+                    <m:HBox id="_IDGenHBox">
+                        <m:VBox id="_IDGenVBox1">
+                            <m:Title id="_IDGenTitle2" text="{mainModel>Name}" wrapping="true"/>
+                            <m:Label id="_IDGenLabel" text="Employee Profile Overview"/>
+                        </m:VBox>
+                    </m:HBox>
+                </snappedHeading>
+ 
+                <actions>
+                    <m:Button id="_IDGenButton1" text="Edit" type="Emphasized"/>
+                    <m:Button id="_IDGenButton2" text="Delete"/>
+                    <m:Button id="_IDGenButton3" text="Copy"/>
+                    <m:OverflowToolbarButton id="_IDGenOverflowToolbarButton" icon="sap-icon://action" type="Transparent" text="Share" tooltip="action" press=".onPressNavigate"/>
+                </actions>
+            </ObjectPageDynamicHeaderTitle>
+        </headerTitle>
+ 
+        <headerContent>
+            <m:FlexBox id="_IDGenFlexBox" wrap="Wrap" fitContainer="true" >
+                <!-- Avatar placed in FlexBox to ensure visibility -->
+                <m:VBox id="_IDGenVBoxAvatar">
+                    <m:Avatar id="_IDGenAvatarFlexBox" src="{mainModel>Image_URL}" class="sapUiMediumMarginEnd sapUiSmallMarginBottom" displaySize="XL"/>
+                </m:VBox>
+ 
+                <m:VBox id="_IDGenVBox2" class="sapUiLargeMarginEnd sapUiSmallMarginBottom sapUiMediumMarginEnd"   >
+                    <m:Title id="_IDGenTitle3" text="Employee Information" class="sapUiSmallMarginBottom" />
+                    <m:Text id="_IDGenText20" text="ID: {mainModel>EmployeeID}" class="sapUiSmallMarginBottom"/>
+                    <m:Text id="_IDGenText21" text="Department: {mainModel>Department}" class="sapUiSmallMarginBottom"/>
+                    <m:Text id="_IDGenText22" text="Salary: {mainModel>Salary}" class="sapUiSmallMarginBottom"/>
+                    <m:Text id="_IDGenText23" text="Age: {mainModel>Age}" class="sapUiSmallMarginBottom"/>
+                   
+                </m:VBox>
+ 
+                <m:VBox id="_IDGenVBox3" class="sapUiLargeMarginEnd sapUiSmallMarginBottom sapUiMediumMarginBegin sapUiMediumMarginEnd">
+                    <m:Title id="_IDGenTitle4" text="Contact Information" class="sapUiSmallMarginBottom" />
+                    <m:HBox id="_IDGenHBox1">
+                        <core:Icon id="_IDGenIcon" src="sap-icon://account"  />
+                        <m:Text id="_IDGenText24" text="   {mainModel>Name}" class="sapUiSmallMarginBottom"/>
+                    </m:HBox>
+                    <m:HBox id="_IDGenHBox2">
+                        <core:Icon id="_IDGenIcon1" src="sap-icon://outgoing-call"/>
+                        <m:Text id="_IDGenText25" text="    {mainModel>Contact}" class="sapUiSmallMarginBottom"/>
+                    </m:HBox>
+                    <m:HBox id="_IDGenHBox3">
+                        <core:Icon id="_IDGenIcon2" src="sap-icon://email"/>
+                        <m:Text id="_IDGenText26" text="    {mainModel>MailID}" class="sapUiSmallMarginBottom"/>
+                    </m:HBox>
+                    <m:HBox id="_IDGenHBox4">
+                        <core:Icon id="_IDGenIcon3" src="sap-icon://home"/>
+                        <m:Text id="_IDGenText27" text="    {mainModel>Address}" class="sapUiSmallMarginBottom"/>
+                    </m:HBox>
+                </m:VBox>
+ 
+                <m:VBox id="_IDGenVBox4" class="sapUiLargeMarginEnd sapUiSmallMarginBottom sapUiMediumMarginBegin sapUiMediumMarginEnd">
+                    <m:Title id="_IDGenTitle5" text="Project Details" class="sapUiTinyMarginBottom" />
+                    <m:Text id="_IDGenText28" text="Project Name: {mainModel>Project_Name}" class="sapUiSmallMarginBottom"/>
+                    <m:Text id="_IDGenText29" text="Manager: {mainModel>Manager}" class="sapUiSmallMarginBottom"/>
+                    <m:Text id="_IDGenText30" text="Client Name: {mainModel>Client_Name}" class="sapUiSmallMarginBottom"/>
+                    <m:Text id="_IDGenText31" text="Team Lead Name: {mainModel>Team_Lead_Name}" class="sapUiSmallMarginBottom"/>
+                    <m:Text id="_IDGenText33" text="Salary Grade: {mainModel>Salary_Grade}" class="sapUiSmallMarginBottom"/>
+                </m:VBox>
+               <m:HBox id="ProductDescriptionRow" class="sapUiSmallMarginTop">
+            <m:VBox id="_IDGenVBox6" class="sapUiLargeMarginEnd sapUiSmallMarginBottom">
+                <m:Title id="_IDGenTitle6" text="About" class="sapUiTinyMarginBottom"/>
+                <m:Text id="_IDGenText19" width="490px"
+                     text="{mainModel>About}"/>
+            </m:VBox>
+        </m:HBox>
+            </m:FlexBox>
+ 
+        </headerContent>
+       
+        <!-- Employee Details Section -->
+        <sections>
+    <!-- Employee Details Section -->
+    <ObjectPageSection titleUppercase="false" id="employmentSection" title="Employee Details">
+        <subSections>
+            <ObjectPageSubSection id="employmentSectionSS2" title="Employee Details" titleUppercase="false">
+                <blocks>
+                   
+                     <m:HBox id="_IDGenHBox56" justifyContent="SpaceBetween">
+                    <!-- First Column -->
+                    <m:VBox id="_IDGenVBox133663">
+                       
+                        <m:Label id="_IDGenLabel144" text="Employee Name:  {mainModel>Name}" class="sapUiSmallMarginBottom"/>
+                        <m:Label id="_IDGenLabel442" text="Employee ID: {mainModel>EmployeeID}"  class="sapUiSmallMarginBottom"/>
+                        <m:Label id="_IDGenLabel4422" text="Work Location: {mainModel>Work_Location}" class="sapUiSmallMarginBottom"/>
+                        <m:Label id="_IDGenLabel44232" text="Salary Grade: {mainModel>Salary_Grade}" />
+ 
+                     
+                    </m:VBox>
+ 
+                    <!-- Second Column -->
+                    <m:VBox id="_IDGenVBox612">
+                        <m:Label id="_IDGenLabel13" text="Role: {mainModel>Role}"  class="sapUiSmallMarginBottom"/>  
+                        <m:Label id="_IDGenLabel114" text="Experience: {mainModel>Experience}" class="sapUiSmallMarginBottom"/>
+                        <m:Label id="_IDGenLabel1114" text="Performance: {mainModel>Performance}"/>
+                       
+                    </m:VBox>
+                </m:HBox>
+                </blocks>
+            </ObjectPageSubSection>
+        </subSections>
+    </ObjectPageSection>
+ 
+    <!-- Project Details Section -->
+   <ObjectPageSection titleUppercase="false" id="projectSection" title="Project Details">
+    <subSections>
+        <ObjectPageSubSection id="projectSectionSS1" title="Project Information" titleUppercase="false">
+            <blocks>
+                <m:HBox id="_IDGenHBox5" justifyContent="SpaceBetween">
+                    <!-- First Column -->
+                    <m:VBox id="_IDGenVBox1333">
+                       
+                        <m:Label id="_IDGenLabel1" text="Project Name:  {mainModel>Project_Name}" class="sapUiSmallMarginBottom"/>
+                        <m:Label id="_IDGenLabel2" text="Manager:  {mainModel>Manager}" />
+                     
+                    </m:VBox>
+ 
+                    <!-- Second Column -->
+                    <m:VBox id="_IDGenVBox62">
+                        <m:Label id="_IDGenLabel3" text="Client Name: {mainModel>Client_Name}"  class="sapUiSmallMarginBottom"/>  
+                        <m:Label id="_IDGenLabel4" text="Team Lead Name:  {mainModel>Team_Lead_Name}"/>
+                       
+                    </m:VBox>
+                </m:HBox>
+            </blocks>
+        </ObjectPageSubSection>
+    </subSections>
+</ObjectPageSection>
+ 
+ 
+    <!-- Other Details Section -->
+    <ObjectPageSection titleUppercase="false" id="otherDetailsSection" title="Other Details">
+        <subSections>
+            <ObjectPageSubSection id="otherDetailsSS1" title="Additional Information" titleUppercase="false">
+                <blocks>
+                   <m:HBox id="_IDGenHBox6665" justifyContent="SpaceBetween">
+                    <m:VBox id="_IDGenVBox9">
+                        <m:Title id="_IDGenTitle9" text="Address" class="sapUiTinyMarginBottom"/>
+                        <m:Text id="_IDGenText42" text="Address: {mainModel>Address}"/>
+                        </m:VBox>
+                     <m:VBox id="_IDGenVBox944">
+                        <m:Title id="_IDGenTitle10" text="LinkedIn Profile" class="sapUiTinyMarginBottom"/>
+                        <m:Link id="_IDGenLink1" text="View LinkedIn" href="{mainModel>LinkedIn}" target="_blank"/>
+                    </m:VBox>
+               </m:HBox>
+                </blocks>
+            </ObjectPageSubSection>
+        </subSections>
+    </ObjectPageSection>
+</sections>
+</ObjectPageLayout>
 </mvc:View>
